Heartbeat Implemented
