# src/main/java/com/servec/governor/controller/HealthApiController.java
@@ -1,0 +1,47 @@
+package com.servec.governor.controller;
+
+import java.io.IOException;
+
+import javax.servlet.http.HttpServletRequest;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.servec.governor.api.HealthApi;
+import com.servec.governor.models.Health;
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2019-12-15T06:26:02.812Z")
+
+@Controller
+public class HealthApiController implements HealthApi {
+
+    private static final Logger log = LoggerFactory.getLogger(HealthApiController.class);
+
+    private final ObjectMapper objectMapper;
+
+    private final HttpServletRequest request;
+
+    @org.springframework.beans.factory.annotation.Autowired
+    public HealthApiController(ObjectMapper objectMapper, HttpServletRequest request) {
+        this.objectMapper = objectMapper;
+        this.request = request;
+    }
+
+    public ResponseEntity<Health> healthGet() {
+        String accept = request.getHeader("Accept");
+        if (accept != null && accept.contains("application/json")) {
+            try {
+                return new ResponseEntity<Health>(objectMapper.readValue("{  \"releasetime\" : \"releasetime\",  \"appname\" : \"appname\",  \"buildtime\" : \"buildtime\",  \"version\" : \"version\"}", Health.class), HttpStatus.NOT_IMPLEMENTED);
+            } catch (IOException e) {
+                log.error("Couldn't serialize response for content type application/json", e);
+                return new ResponseEntity<Health>(HttpStatus.INTERNAL_SERVER_ERROR);
+            }
+        }
+
+        return new ResponseEntity<Health>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+}
